# rust-axum-boilerplate

./: .env  .env.example  .gitignore  .prettierrc  Cargo.toml  Dockerfile  diesel.toml  readme.md  rustfmt.toml
backup/: server.rs.backup
scripts/: release.sh
src/: config.rs  constant.rs  database.rs  dto.rs  lib.rs  main.rs  route.rs  routes.rs  server.rs
src/constant/: app_config.rs  mod.rs
src/controllers/: mod.rs  user_controller.rs
src/docs/: api_doc.rs
src/middlewares/: auth_middlewares.rs  mod.rs
src/models/: user_model.rs
src/modules/: mod.rs
src/modules/user/: mod.rs  user_controller.rs  user_service.rs
src/routes/: user_route.rs
src/services/v1/: mod.rs  user_controller.rs  user_model.rs
src/utils/: cache.rs  encrypt.rs  errors.rs  extractor.rs  files.rs  formatter.rs  generator.rs  generator_account.rs  helper.rs  logger.rs  mod.rs  responses.rs  string.rs  structify.rs  token.rs
