[package]
name = "rust_axum_boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["timeout", "buffer", "limit"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
